infrastructure/ec2.tf
resource "aws_instance" "web" {
  ami           = data.aws_ami.amazon_linux.id
  instance_type = var.ec2_instance_type

  subnet_id = aws_subnet.public.id

  vpc_security_group_ids = [
    aws_security_group.ec2.id
  ]

  iam_instance_profile = aws_iam_instance_profile.ec2.name

  lifecycle {
    ignore_changes = [
      ami
    ]
  }

  tags = {
    Name = "${var.project_name}-ec2"
  }
}
